--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-googlemaps
+import pandas as pd
+import googlemaps
+import os
+import streamlit as st
+from sklearn.cluster import KMeans
+from pulp import LpProblem, LpMinimize, LpVariable, lpSum
+import networkx as nx
+from itertools import permutations
+from ortools.constraint_solver import routing_enums_pb2
+from ortools.constraint_solver import pywrapcp
+import folium
+from streamlit_folium import folium_static
+import streamlit_authenticator as stauth
+
